# DariusDanai-ScaleTruck

./: .env.example  .gitignore  README.md
.devcontainer/: devcontainer.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug.md  research.md  task.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  control_pipeline.md  dds_discovery_validation.md  development_environment.md  ros1_inventory.md  ros1_to_ros2_file_map.md  ros1_vs_ros2.md  ros2_environment_setup.md  ros2_interfaces_and_topics.md  ros2_launch_config_notes.md  ros2_migration_checklist.md  ros2_migration_guide.md  ros2_node_port_notes.md  ros2_qos_profiles.md  ros2_runtime_integration_decisions.md  task_tracker.md
docs/design/: architecture.md  control-pipeline.md  interfaces-and-topics.md  launch-and-configuration.md  qos-profiles.md  runtime-decisions.md
docs/migration/: checklist.md  file-map.md  guide.md  node-port-notes.md  ros1-inventory.md  ros1-vs-ros2.md
docs/planning/: task-tracker.md
docs/setup/: dds-validation.md  development-options.md  running-ros2.md
firmware/teensy/: README.md
maps/: README.md
references/: README.md
ros2_ws/: README.md
ros2_ws/src/: README.md
ros2_ws/src/scale_truck_bringup/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scale_truck_bringup/config/: fv1.yaml  fv2.yaml  laser_filter.yaml  lv.yaml  sensors.yaml  serial_bridge.yaml
ros2_ws/src/scale_truck_bringup/launch/: fv1.launch.py  fv2.launch.py  lv.launch.py  vehicle.launch.py
ros2_ws/src/scale_truck_control/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scale_truck_control/include/scale_truck_control/: ScaleTruckController.hpp  lrc.hpp  qos.hpp  sock_udp.hpp
ros2_ws/src/scale_truck_control/src/: ScaleTruckController.cpp  control_node.cpp  lrc.cpp  lrc_node.cpp  sock_udp.cpp
ros2_ws/src/scale_truck_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scale_truck_firmware_bridge/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scale_truck_firmware_bridge/src/: serial_bridge_node.py
ros2_ws/src/scale_truck_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scale_truck_msgs/msg/: Lane.msg  LaneCoef.msg  Lrc2Ocr.msg  Lrc2Xav.msg  Ocr2Lrc.msg  Xav2Lrc.msg
ros2_ws/src/scale_truck_telemetry/: CMakeLists.txt  README.md  package.xml
scripts/: README.md  validate_ros2_dds_discovery.sh
tests/: README.md
